style: auto-fix biome lint and format issues

--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -16,7 +16,10 @@
       "headers": [
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET, POST, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Content-Type, X-API-Key, X-HF-Token, X-MS-Token" }
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, X-API-Key, X-HF-Token, X-MS-Token"
+        }
       ]
     }
   ]
