--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "typescript": "^5.9.3",
     "vitest": "^4.0.17",
     "wrangler": "^4.59.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "undici": "^7.18.2"
+    }
   }
 }
